--- a/Gallery.html
+++ b/Gallery.html
@@ -142,17 +142,17 @@
       <h2>My Gallery</h2>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-          <li data-target="#myCarousel" data-slide-to="3"></li>
-          <li data-target="#myCarousel" data-slide-to="4"></li>
-          <li data-target="#myCarousel" data-slide-to="5"></li>
-          <li data-target="#myCarousel" data-slide-to="6"></li>
-          <li data-target="#myCarousel" data-slide-to="7"></li>
-          <li data-target="#myCarousel" data-slide-to="8"></li>
-          <li data-target="#myCarousel" data-slide-to="9"></li>
+       <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="C:\Users\LENOVO\Downloads\477024155_687530360471775_5096575644372071079_n" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="C:\Users\LENOVO\Downloads\476593069_1706217516953834_4799865515443271074_n"></li>
+          <li data-target="#myCarousel" data-slide-to="C:\Users\LENOVO\Downloads\467464345_454798957493688_6985080833368562500_n"></li>
+          <li data-target="#myCarousel" data-slide-to="C:\Users\LENOVO\Downloads\476162822_1318542122681072_3456754465250720394_n"></li>
+          <li data-target="#myCarousel" data-slide-to="C:\Users\LENOVO\Downloads\473049546_2004814070032805_8546484440961226457_n"></li>
+          <li data-target="#myCarousel" data-slide-to="C:\Users\LENOVO\Downloads\476588994_648095544360741_480524591437234721_n"></li>
+          <li data-target="#myCarousel" data-slide-to="C:\Users\LENOVO\Downloads\476916745_602174095944746_8056282889855400989_n"></li>
+          <li data-target="#myCarousel" data-slide-to="C:\Users\LENOVO\Downloads\476687871_1138299674509180_6209430823336238481_n"></li>
+          <li data-target="#myCarousel" data-slide-to="C:\Users\LENOVO\Downloads\474682264_1282069833015647_7961673293385200899_n"></li>
+          <li data-target="#myCarousel" data-slide-to="C:\Users\LENOVO\Downloads\476184974_1277751743482038_5396378097243380199_n"></li>
         </ol>
 
         <!-- Wrapper for slides -->
